fix left margin spacing

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -13,7 +13,6 @@
   body {
     -webkit-font-smoothing: antialiased;
     color: #FFFFFF;
-    margin-left: -60px;
   }
 
 
